fixed enforcer middleware
